--- a/languages/seravo-fi.po
+++ b/languages/seravo-fi.po
@@ -2,15 +2,15 @@ msgid ""
 msgstr ""
 "Project-Id-Version: WP-Palvelu Plugin\n"
 "Report-Msgid-Bugs-To: https://wordpress.org/support/plugin/seravo-plugin\n"
-"POT-Creation-Date: 2017-10-11 12:17:16+00:00\n"
-"PO-Revision-Date: 2017-10-11 15:19+0300\n"
-"Last-Translator: Otto Kekäläinen <otto@seravo.com>\n"
+"POT-Creation-Date: 2017-11-16 17:40:27+00:00\n"
+"PO-Revision-Date: 2017-11-16 19:45+0200\n"
+"Last-Translator: Leo Toikka <leo@seravo.fi>\n"
 "Language-Team: Onni Hakala <onni@koodimonni.fi>\n"
 "Language: fi_FI\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
-"X-Generator: Poedit 2.0.3\n"
+"X-Generator: Poedit 2.0.4\n"
 "X-Poedit-Basepath: ..\n"
 "X-Poedit-SourceCharset: UTF-8\n"
 "X-Poedit-KeywordsList: __;_e;_n:1,2;_x:1,2c;_ex:1,2c;_nx:4c,1,2;esc_attr__;"
@@ -54,6 +54,23 @@ msgstr ""
 #: lib/backups-page.php:18
 msgid "Make a new backup"
 msgstr "Ota uusi varmuuskopio"
+
+#: lib/cruftfiles-page.php:3
+msgid "Cruft Files (beta)"
+msgstr "Roskatiedostot"
+
+#: lib/cruftfiles-page.php:5
+msgid "Find and delete unnecessary files in the filesystem"
+msgstr ""
+"Etsi ja poista tarpeettomia tiedostoja palvelimelta levytilan säästämiseksi"
+
+#: lib/cruftfiles-page.php:12
+msgid "Finding files..."
+msgstr "Etsitään tiedostoja…"
+
+#: lib/cruftfiles-page.php:16
+msgid "Note! Deleted files cannot be undeleted."
+msgstr "Huomio! Tiedostot poistetaan pysyvästi."
 
 #: lib/domains-dns.php:13
 msgid "Zone for: "
@@ -312,6 +329,22 @@ msgstr ""
 "\">WordPressin asetuksissa</a>. Ole hyvä ja <a href=\"https://wp-palvelu.fi/"
 "blogi/miten-otan-https-kayttoon/\">ota https käyttöön sivustolla</a>."
 
+#: modules/cruftfiles.php:24 modules/cruftfiles.php:25
+msgid "Cruft Files"
+msgstr "Roskatiedostot"
+
+#: modules/cruftfiles.php:54 modules/tests.php:37
+msgid "No data returned for section."
+msgstr "Testi ei palauttanut dataa."
+
+#: modules/cruftfiles.php:55
+msgid "Are you sure you want to proceed? Deleted files can not be recovered."
+msgstr "Oletko varma, että haluat jatkaa? Tiedostot poistetaan pysyvästi."
+
+#: modules/cruftfiles.php:56 modules/tests.php:40
+msgid "Failed to load. Please try again."
+msgstr "Lataaminen epäonnistui. Yritä uudelleen."
+
 #: modules/instance-switcher.php:98
 msgid "Now in"
 msgstr "Nyt käytössä"
@@ -452,10 +485,6 @@ msgstr "Onnistui:"
 msgid "The cache was flushed"
 msgstr "Välimuisti tyhjennetty"
 
-#: modules/tests.php:37
-msgid "No data returned for section."
-msgstr "Testi ei palauttanut dataa."
-
 #: modules/tests.php:38
 msgid "Tests run succesfully without errors!"
 msgstr "Testit suoritettu onnistuneesti ilman virheitä!"
@@ -463,10 +492,6 @@ msgstr "Testit suoritettu onnistuneesti ilman virheitä!"
 #: modules/tests.php:39
 msgid "At least one test failed."
 msgstr "Ainakin yksi testi epäonnistui."
-
-#: modules/tests.php:40
-msgid "Failed to load. Please try again."
-msgstr "Lataaminen epäonnistui. Yritä uudelleen."
 
 #: modules/tests.php:41
 msgid "Running rspec tests..."
